added ability to save tolerances for each setting